@@ -209,7 +209,7 @@ typedef enum {
 
 typedef enum {
 	HTML_VALIGN_TOP,
-	HTML_VALIGN_CENTER,
+	HTML_VALIGN_MIDDLE,
 	HTML_VALIGN_BOTTOM,
 	HTML_VALIGN_NONE
 } HTMLVAlignType;
